@@ -13278,7 +13278,7 @@ the resulting value is used in its place.
 
 .coNP Function @ where
 .synb
-.mets (where < object << function )
+.mets (where < function << object )
 .syne
 .desc
 
@@ -26079,6 +26079,10 @@ individual characters as if by calling
 .codn list-str .
 This behavior changed to the currently
 documented behavior starting in \*(TX 101.
+Also, the arguments of the
+.code where
+function, which introduced in \*(TX 91, were reversed starting
+in \*(TX 101.
 
 .IP 99
 Up to \*(TX 99, the substitution of TXR Lisp expressions in
